# ChurningRig

./: .gitignore  ChurningRig.sln
ChurningRig/: BinRes.cpp  BinRes.h  CSerialTermDlg.cpp  CSerialTermDlg.h  CWalkDlg.h  ChurningRig.cpp  ChurningRig.h  ChurningRig.vcxproj  ChurningRig.vcxproj.filters  ChurningRigDlg.cpp  ChurningRigDlg.h  ComPortsDialog.cpp  ComPortsDialog.h  ME2HTRlab.rc  enumser.cpp  pch.h  resource.h
ChurningRig/Debug/: ChurningRig.exe.recipe  ChurningRig.res  ME2HTRlab.res  MechEngDatalogger.exe.recipe  RCa00168  RCa22304  vc142.idb
ChurningRig/Debug/ChurningRig.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChurningRig.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
ChurningRig/Release/: ChurningRig.exe.recipe  ChurningRig.iobj  ChurningRig.ipdb  ME2HTRlab.res
ChurningRig/Release/ChurningRig.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChurningRig.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
ChurningRig/res/: ME2HTRlab.rc2
ChurningRig/x64/Debug/: ME2HTRlab.res  vc142.idb
ChurningRig/x64/Debug/ChurningRig.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChurningRig.lastbuildstate  rc.command.1.tlog  (+1 more)
InverterDriver_nRF52840/: InverterDrive.cpp  InverterDrive.h  InverterDriver_nRF52840.ino  picoSPI.h
enc_pio_spi/: CMakeLists.txt  SparkFun_Qwiic_Scale_NAU7802_Arduino_Library.c  SparkFun_Qwiic_Scale_NAU7802_Arduino_Library.h  enc_pio_spi.c  enc_pio_spi.pio
